# cpp-playground

./: CMakeLists.txt  TODO-cmake  makefile  tutorial.cxx  variables.mk
cmake/: TODO-cmake
cmake/step1/: CMakeLists.txt  Makefile  Tutorial  cmake_install.cmake  tutorial.cxx
cmake/step2/: .directions.txt.swp  CMakeLists.txt  tutorial.cxx
cmake/step3/MathFunctions/: CMakeLists.txt
cmake/step4/: .CMakeLists.txt.swp  CMakeLists.txt
cmake/step4/MathFunctions/: CMakeLists.txt
step1/: CMakeCache.txt
step2/: .CMakeLists.txt.swp  CMakeLists.txt  tutorial.cxx
step3/: CMakeLists.txt  tutorial.cxx
